--- a/Centerlessblog/templates/login.html
+++ b/Centerlessblog/templates/login.html
@@ -58,31 +58,42 @@
         <div id="content" class="container" style="margin-top: 20px">
             <div class="row">
                 <div class="col-12 col-md-6 offset-md-3">
-                    <form class="login" id="login_form" method="POST">
+                    <form class="login" id="login_form" method="POST" onsubmit="return validateForm()">
                         {% csrf_token %}
                         <div class="form-group">
                             <label for="id_login">账号: </label>
                             <input type="text" name="mobile" placeholder="请输入手机号" autofocus="autofocus" required
-                                id="id_login" class="form-control" v-model="mobile" @blur="check_mobile" />
+                                   id="id_login" class="form-control" v-model="mobile" @blur="check_mobile"/>
                             <small class="form-text text-muted ml-1">还没有账号？<a href="{% url 'users:register' %}"
-                                    style="color: #0259f6; ">注册新账号</a>
+                                                                                   style="color: #0259f6; ">注册新账号</a>
                             </small>
                         </div>
                         <div class="form-group mb-1">
                             <label for="id_password">密码:</label>
                             <input type="password" name="password" placeholder="请输入密码" required id="id_password"
-                                class="form-control" v-model="password" @blur="check_password" />
+                                   class="form-control" v-model="password" @blur="check_password"/>
                             <small class="form-text text-muted ml-1"><a class="secondaryAction layui-text"
-                                    href="{% url 'users:forget_password' %}">忘记密码?</a>
+                                                                        href="{% url 'users:forget_password' %}">忘记密码?</a>
                             </small>
                         </div>
                         <div class="custom-control custom-checkbox mb-2">
                             <input type="checkbox" name="remember" id="id_remember" checked class="custom-control-input"
-                                v-model="remembered" />
+                                   v-model="remembered"/>
                             <label for="id_remember" class="custom-control-label">保持登录</label>
                         </div>
                         <button class="primaryAction btn btn-primary" type="submit" id="submit_login"
-                            @click="on_submit">登录</button>
+                                @click="on_submit">登录
+                        </button>
+
+                        {% if messages %}
+                            <div class="alert alert-danger mt-3">
+                                <ul class="list-unstyled mb-0">
+                                    {% for message in messages %}
+                                        <li>{{ message }}</li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        {% endif %}
                     </form>
                 </div>
             </div>
@@ -99,6 +110,29 @@
 <script type="text/javascript" src="{% static 'js/host.js'%}"></script>
 <script type="text/javascript" src="{% static 'js/common.js'%}"></script>
 <script type="text/javascript" src="{% static 'js/login.js'%}"></script>
+<script>
+    function validateForm() {
+        const mobile = document.getElementById("id_login").value.trim();
+        const password = document.getElementById("id_password").value;
+
+        if (mobile.length === 0 || password.length === 0) {
+            alert("账号或密码不能为空");
+            return false;
+        }
+
+        if (mobile.length !== 11 || !/^\d{11}$/.test(mobile)) {
+            alert("手机号必须为11位数字");
+            return false;
+        }
+
+        if (password.length < 8 || password.length > 20) {
+            alert("密码长度不能小于8位或者大于20位");
+            return false;
+        }
+
+        return true; // Allow form submission
+    }
+</script>
 </body>
 
 </html>
