--- a/Centerlessblog/templates/write_blog.html
+++ b/Centerlessblog/templates/write_blog.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <!-- 引入monikai.css -->
     <link rel="stylesheet" href="{% static 'md_css/monokai.css' %}">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- 引入vuejs -->
     <script type="text/javascript" src="{% static 'js/vue-2.5.16.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/axios-0.18.0.min.js' %}"></script>
@@ -24,11 +25,13 @@
             background-size: cover;
             background-position: center center;
         }
+
         #app {
             display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
+
         /* Style the footer */
         footer {
             position: absolute;
@@ -84,36 +87,36 @@
         </div>
     </nav>
 
-<!-- 写文章表单 -->
-<div class="container" style="margin-bottom: 20px">
-    <div class="row">
-        <div class="col-12">
-            <br>
-            <!-- 提交文章的表单 -->
-            <form method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                <!-- 文章标题图 -->
-                <div class="form-group">
-                    <label for="avatar">标题图</label>
-                    <input type="file" class="form-control-file" name="avatar" id="avatar" onchange="displayImage()">
-                </div>
-                <div id="uploaded-image-container">
-                    <!-- 已上传图片将在这里显示 -->
-                </div>
+    <!-- 写文章表单 -->
+    <div class="container" style="margin-bottom: 20px">
+        <div class="row">
+            <div class="col-12">
+                <br>
+                <!-- 提交文章的表单 -->
+                <form method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
+                    {% csrf_token %}
+                    <!-- 文章标题图 -->
+                    <div class="form-group">
+                        <label for="avatar">标题图</label>
+                        <input type="file" class="form-control-file" name="avatar" id="avatar"
+                               onchange="displayImage()">
+                    </div>
+                    <div id="uploaded-image-container">
+                        <!-- 已上传图片将在这里显示 -->
+                    </div>
 
-                <!-- 文章标题 -->
-                <div class="form-group">
-                    <!-- 标签 -->
-                    <label for="title">文章标题</label>
-                    <!-- 文本框 -->
-                    <input type="text" class="form-control" id="title" name="title">
-                </div>
-                
-                <!-- 文章栏目 -->
-                <div class="form-group">
-                    <label for="category">栏目</label>
-                    <select class="form-control col-3" id="category" name="category">
-                            <option value="none" >请选择分类...</option>
+                    <!-- 文章标题 -->
+                    <div class="form-group">
+                        <!-- 标签 -->
+                        <label for="title">文章标题</label>
+                        <input type="text" class="form-control" id="title" name="title" required>
+                    </div>
+
+                    <!-- 文章栏目 -->
+                    <div class="form-group">
+                        <label for="category">栏目</label>
+                        <select class="form-control col-3" id="category" name="category" required>
+                            <option value="none">请选择分类...</option>
                             {% for category in categories %}
                                 <option value="{{ category.id }}">{{ category.sort_title }}</option>
                             {% endfor %}
@@ -143,21 +146,22 @@
                         </textarea>
                 </div>
                 <!-- 提交按钮 -->
-                <button type="submit" class="btn btn-primary">完成</button>
+                <button type="submit" class="btn btn-primary">发表</button>
             </form>
         </div>
     </div>
 </div>
 
-<!-- Footer -->
-<footer class="py-3 bg-dark" id="footer">
-    <div class="container">
-        <h5 class="m-0 text-center text-white">Copyright @ Centerless</h5>
-    </div>
-</footer>
+    <!-- Footer -->
+    <footer class="py-3 bg-dark" id="footer">
+        <div class="container">
+            <h5 class="m-0 text-center text-white">Copyright @ Centerless</h5>
+        </div>
+    </footer>
 </div>
 <!--ckeditor-->
-<script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}" data-ckeditor-basepath="{% static 'ckeditor/ckeditor/' %}" id="ckeditor-init-script"></script>
+<script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"
+        data-ckeditor-basepath="{% static 'ckeditor/ckeditor/' %}" id="ckeditor-init-script"></script>
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
 <!-- 引入js -->
 <script type="text/javascript" src="{% static 'js/host.js' %}"></script>
@@ -182,6 +186,41 @@
 
             reader.readAsDataURL(input.files[0]);
         }
+    }
+
+    function validateForm() {
+        const avatar = document.getElementById("avatar").value;
+        const title = document.getElementById("title").value;
+        const category = document.getElementById("category").value;
+        const tags = document.getElementById("tags").value;
+        const sumary = document.getElementById("sumary").value;
+
+        if (avatar.trim() === "") {
+            alert("请上传标题图");
+            return false;
+        }
+
+
+        if (title.trim() === "") {
+            alert("请填写文章标题");
+            return false;
+        }
+
+        if (category === "none") {
+            alert("请选择栏目");
+            return false;
+        }
+
+        if (tags.trim() === "") {
+            alert("请填写标签");
+            return false;
+        }
+
+        if (sumary.trim() === "") {
+            alert("请填写文章摘要");
+            return false;
+        }
+        return true;
     }
 </script>
 </body>
