--- a/Centerlessblog/templates/center.html
+++ b/Centerlessblog/templates/center.html
@@ -14,33 +14,30 @@
     <script type="text/javascript" src="{% static 'js/vue-2.5.16.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/axios-0.18.0.min.js' %}"></script>
     <style>
-        body {
+        html, body {
             height: 100%;
-            margin: 0; /* Add margin: 0 to remove default body margin */
+            margin: 0;
+            padding: 0;
             background-image: url('/static/img/tuijian.png');
             background-size: cover;
             background-position: center center;
         }
+
         #app {
             display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
-        /* Style the footer */
-        footer {
-            position: absolute;
-            width: 100%;
-            height: 50px; /* Set the desired height for the footer */
-            background-color: #343a40; /* Use your desired color */
-            color: #fff; /* Use your desired text color */
-            bottom: 0;
+
+        .container {
+            flex-grow: 1;
         }
 
-        footer .container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
+        #footer {
+            background-color: #343a40;
+            color: white;
+            padding: 15px 0;
+            text-align: center;
         }
     </style>
 </head>
@@ -90,10 +87,11 @@
                 <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                     <!-- username -->
-                <div class="form-group col-md-4">
-                    <label for="username">用户名</label>
-                    <input type="text" class="form-control" id="username" name="username" value="{{ username }}" >
-                </div>
+                    <div class="form-group col-md-4">
+                        <label for="username">用户名<span style="color: red">*</span></label>
+                        <input type="text" class="form-control" id="username" name="username" value="{{ username }}"
+                               required>
+                    </div>
                 <!--<br><h5 class="col-md-4">暂无头像</h5><br>-->
                 {% if avatar %}
                     <br> <div class="col-md-4">头像</div>
@@ -105,8 +103,9 @@
 
                     <!-- avatar -->
                     <div class="form-group col-md-4">
-                        <label for="avatar">上传头像</label>
-                        <input type="file" class="form-control-file" name="avatar" id="avatar"  accept="image/*" onchange="validateFile(this)">
+                        <label for="avatar">上传头像<span style="color: red">*</span></label>
+                        <input type="file" class="form-control-file" name="avatar" id="avatar" accept="image/*"
+                               onchange="validateFile(this)">
                     </div>
 
                     <!-- phone -->
