--- a/Centerlessblog/templates/login.html
+++ b/Centerlessblog/templates/login.html
@@ -15,13 +15,10 @@
     <script type="text/javascript" src="{% static 'js/vue-2.5.16.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/axios-0.18.0.min.js' %}"></script>
     <style>
-        html,
-        body {
+        html, body {
             height: 100%;
-            margin: 0; /* Add margin: 0 to remove default body margin */
-        }
-
-        body { /* Add the background image CSS to the body instead of #app */
+            margin: 0;
+            padding: 0;
             background-image: url('/static/img/tuijian.png');
             background-size: cover;
             background-position: center center;
@@ -33,8 +30,15 @@
             min-height: 100vh;
         }
 
-        #content {
-            flex: 1;
+        .container {
+            flex-grow: 1;
+        }
+
+        #footer {
+            background-color: #343a40;
+            color: white;
+            padding: 15px 0;
+            text-align: center;
         }
     </style>
 </head>
@@ -61,7 +65,7 @@
                     <form class="login" id="login_form" method="POST" onsubmit="return validateForm()">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="id_login">账号: </label>
+                            <label for="id_login">账号: <span style="color: red">*</span></label>
                             <input type="text" name="mobile" placeholder="请输入手机号" autofocus="autofocus" required
                                    id="id_login" class="form-control" v-model="mobile" @blur="check_mobile"/>
                             <small class="form-text text-muted ml-1">还没有账号？<a href="{% url 'users:register' %}"
@@ -69,7 +73,7 @@
                             </small>
                         </div>
                         <div class="form-group mb-1">
-                            <label for="id_password">密码:</label>
+                            <label for="id_password">密码:<span style="color: red">*</span></label>
                             <input type="password" name="password" placeholder="请输入密码" required id="id_password"
                                    class="form-control" v-model="password" @blur="check_password"/>
                             <small class="form-text text-muted ml-1"><a class="secondaryAction layui-text"
