--- a/Centerlessblog/templates/write_blog.html
+++ b/Centerlessblog/templates/write_blog.html
@@ -18,9 +18,10 @@
     <script type="text/javascript" src="{% static 'js/vue-2.5.16.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/axios-0.18.0.min.js' %}"></script>
     <style>
-        body {
+        html, body {
             height: 100%;
-            margin: 0; /* Add margin: 0 to remove default body margin */
+            margin: 0;
+            padding: 0;
             background-image: url('/static/img/tuijian.png');
             background-size: cover;
             background-position: center center;
@@ -32,21 +33,15 @@
             min-height: 100vh;
         }
 
-        /* Style the footer */
-        footer {
-            position: absolute;
-            width: 100%;
-            height: 50px; /* Set the desired height for the footer */
-            background-color: #343a40; /* Use your desired color */
-            color: #fff; /* Use your desired text color */
-            bottom: 0;
+        .container {
+            flex-grow: 1;
         }
 
-        footer .container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
+        #footer {
+            background-color: #343a40;
+            color: white;
+            padding: 15px 0;
+            text-align: center;
         }
     </style>
 </head>
